# tensy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/actions/upload-output/: action.yml
.github/workflows/: android.yml  haiku.yml  linux.yml  macos.yml  psvita.yml  web.yml  windows.yml
android/: .gitignore  build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: org
android/app/src/main/java/se/voxelmanip/tensy/: GameActivity.java
android/app/src/main/res/values/: strings.xml
cmake/: DownloadLib.cmake  GenerateDataFiles.cmake  SDL.cmake  SDL_mixer.cmake  libxmp.cmake
data/: clock.qoi  intro_raccoon.qoi  intro_text.qoi  pause.qoi  shuffle.qoi  undo.qoi
data/music/: music_credits.oxm  music_mainmenu.xm
data/puzzles/: 1.puz  lvl_0.puz  lvl_1.puz  lvl_2.puz  template.puz
data/textures/: background_stripes.qoi  check.qoi  cursor.qoi  end.qoi  icon.qoi  infinite.qoi  itchio.qoi  settings.qoi
lib/: .gitignore  bin2h.sh
lib/SDL_QOI/: README.md  SDL_QOI.c  SDL_QOI.h
lib/perlin/: README  perlin.c  perlin.h
metadata/en-US/: full_description.txt  short_description.txt  title.txt
packaging/: Info.plist  PkgInfo  _common.sh  build-android-deps.sh  build-haiku.sh  build-lin.sh  build-macos.sh  build-vita.sh  build-web.sh  build-win.sh  build.sh  dl-deps.sh  index.html  releasing.sh  se.voxelmanip.tensy.desktop  se.voxelmanip.tensy.metainfo.xml  tensy.icns  tensy.manifest  tensy.rc  toolchain-aarch64-w64-mingw32.cmake  toolchain-armv7-w64-mingw32.cmake  toolchain-i686-w64-mingw32.cmake  toolchain-x86_64-w64-mingw32.cmake  update_version.sh  version.json
packaging/AppDir/: .DirIcon  tensy.desktop
src/: app.c  app.h  board.c  board.h  color.c  color.h  colours.c  colours.h  consts.h  datetime.c  datetime.h  debug.c  debug.h  draw.c  draw.h  exiting.c  exiting.h  fileio.c  fileio.h  font.c  font.h  font_bitmap.h  game.c  game.h  gameconfig.c  gameconfig.h  gamemode.c  gamemode.h  gamepad.c  gamepad.h  gamesettings.c  gamesettings.h  gamestate.c  gamestate.h  graph.c  graph.h  highscores.c  highscores.h  input.c  input.h  (+41 more)
src/data/: background_stripes.h
src/gui/: button.c  button.h  checkbox.c  checkbox.h  colorpicker.c  colorpicker.h  dropdown.c  dropdown.h  slider.c  slider.h  tex_button.c  tex_button.h  textinput.c  textinput.h  tooltip.c  tooltip.h
src/media/: assetloader.h  font_bitmap.h  lsdozxa.c  lsdozxa.h  music.c  music.h  raccoon.c  raccoon.h  sound.c  sound.h  textures.c  textures.h
src/modes/: classic.c  classic.h  five.c  five.h  gravity.c  gravity.h  infinite.c  leisure.c  leisure.h  lucky.c  lucky.h  noise.c  puzzle.c
src/overlays/: endgame.c  endgame.h  exitconfirm.c  exitconfirm.h  game_statistics_numbers.c  gameover.c  pause.c  pause.h  puzzle_editor_exit.c  puzzle_editor_help.c  puzzle_note.c  shuffle.c  shuffle.h  success.c  timeout.c  timeout.h
src/scenes/: about.c  about.h  clear_data.c  credits.c  credits.h  customize_colors.c  devintro.c  devintro.h  exiting.c  exiting.h  game.c  game.h  gameconfig.c  gameconfig.h  intro.c  intro.h  leaderboard.c  leaderboard.h  mainmenu.c  mainmenu.h  puzzle_editor.c  puzzle_select.c  selectmode.c  selectmode.h  settings.c  settings.h  statistics.c  statistics.h  statistics_numbers.c
util/: iwyu.imp  iwyu.sh
